Add index.html to fix links
Fixed the page links on the index.html

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 
         <ul class="nav-links">
             <li>
-                <a href="#" class="nav-link">About</a>
+                <a href="#about-education-section" class="nav-link">About</a>
             </li>
             <li>
-                <a href="#" class="nav-link">Contact</a>
+                <a href="#contact-section" class="nav-link">Contact</a>
             </li>
             <li>
-                <a href="#" class="nav-link">Home</a>
+                <a href="#welcome-section" class="nav-link">Home</a>
             </li>
             <li>
-                <a href="#" class="nav-link">Skills</a>
+                <a href="#skills-certs-section" class="nav-link">Skills</a>
             </li>
         </ul>
 
