--- a/index.html
+++ b/index.html
@@ -50,8 +50,6 @@
                 <img src="images/self-portrait.png" alt="My self portrait" class="avatar">
             </div>
 
-            <a id="about-me-btn" href="#about-education-section"><button class="page-link-btn">About Me</button></a>
-
         </section>
 
     </main>
@@ -67,13 +65,18 @@
 
             <section class="about-section">
                 <h1 class="section-title" id="about-title">About Me</h1>
-                <p class="section-paragraph about-paragraph">Lorem ipsum odor amet, consectetuer adipiscing elit. Elementum sapien faucibus sociosqu ut cubilia eget curae platea. Cras phasellus fringilla eget tempor placerat facilisis sollicitudin arcu. Odio mollis sit lorem posuere; vestibulum tempus auctor.</p>
-                <p class="section-paragraph about-paragraph">Lorem ipsum odor amet, consectetuer adipiscing elit. Elementum sapien faucibus sociosqu ut cubilia eget curae platea. Cras phasellus fringilla eget tempor placerat facilisis sollicitudin arcu. Odio mollis sit lorem posuere; vestibulum tempus auctor.</p>
-                <p class="section-paragraph about-paragraph">Lorem ipsum odor amet, consectetuer adipiscing elit. Elementum sapien faucibus sociosqu ut cubilia eget curae platea.</p>
+                <p class="section-paragraph about-paragraph">I'm a tech enthusiast that enjoys learning all of the newest and latest technologies. I've loved learning about tech since I was 4 years old
+                    when my family got our first computer. I was a gamer at an early age and learned how to install mods for minecraft and set up servers on my own. I love to tinker around with all sorts
+                    of tech gadgets and learn how to troubleshoot new problems I encounter. 
+                </p>
+                <p class="section-paragraph about-paragraph">I'm currently pursuing certs and a bachelors degree for cybersecurity because that's what I'm truly passionate about.
+                    When I was a child I made it a goal to crack passwords when my parents would set up parental locks on devices. So I've always been intrigued by hacking, device security, and coding.
+                </p>
+                <p class="section-paragraph about-paragraph">My goals are to learn all that I can about the latest tech and how to prevent the latest forms of cyber attacks, and to help others learn and
+                    prevent them as well. I hope to be an incredible asset to a team or companies to help fortify against these latest attacks.
+                </p>
             </section>
         </div>
-
-        <a href="#skills-certs-section" id="skills-btn"><button class="page-link-btn">View My Skills</button></a>
 
     </section>
 
@@ -103,6 +106,7 @@
                     <li class="skill">HTML</li>
                     <li class="skill">CSS</li>
                     <li class="skill">Windows Security</li>
+                    <li class="skill">Linux</li>
                     <li class="skill">Encryption</li>
                     <li class="skill">Wireshark</li>
                     <li class="skill">tcpdump</li>
