Update index.html and styles.css
Fixed the image formats

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <main class="main">
 
-        <img src="images/hero-bg.jpeg" alt="" class="main-bg-img">
+        <img loading="lazy" src="images/hero-bg.webp" alt="Tech background" class="main-bg-img">
 
         <section id="welcome-section">
 
@@ -47,7 +47,7 @@
             <div class="empty-section"></div>
 
             <div class="avatar-container">
-                <img src="images/self-portrait.png" alt="My self portrait" class="avatar">
+                <img loading="lazy" src="images/self-portrait.webp" alt="My self portrait" class="avatar">
             </div>
 
         </section>
@@ -65,7 +65,7 @@
 
             <section class="about-section">
                 <h1 class="section-title" id="about-title">About Me</h1>
-                <p class="section-paragraph about-paragraph">I'm a tech enthusiast that enjoys learning all of the newest and latest technologies. I've loved learning about tech since I was 4 years old
+                <p class="about-paragraph section-paragraph">I'm a tech enthusiast that enjoys learning all of the newest and latest technologies. I've loved learning about tech since I was 4 years old
                     when my family got our first computer. I was a gamer at an early age and learned how to install mods for minecraft and set up servers on my own. I love to tinker around with all sorts
                     of tech gadgets and learn how to troubleshoot new problems I encounter. 
                 </p>
@@ -80,21 +80,14 @@
 
     </section>
 
-    <section id="projects">
-        <div class="project-tile">
-            <a href="#"></a>
-            <a target="_blank" href="#" id="profile-link"></a>
-        </div>
-    </section>
-
     <section id="skills-certs-section">
-        <img src="images/AdobeStock_914327675.jpeg" alt="Tech Network Image" id="skills-bg-img">
+        <img loading="lazy" src="images/digitalBGTwo.webp" alt="Tech Network Image" id="skills-bg-img">
         
         <div id="certification-section">
             <h1 class="section-title">Certifications</h1>
             <div id="cert-container">
-                <img src="images/comptia-a+-logo.png" alt="Comptia A+ Certification Logo" class="cert-img">
-                <img src="images/certified-in-cs-logo.png" alt="Certified in Cybersecurity logo" class="cert-img">
+                <img loading="lazy" src="images/comptia-a+-logo.webp" alt="Comptia A+ Certification Logo" class="cert-img">
+                <img loading="lazy" src="images/certified-in-cs-logo.webp" alt="Certified in Cybersecurity logo" class="cert-img">
             </div>
         </div>
 
@@ -124,8 +117,8 @@
         <h3 class="footer-heading">Contact</h3>
         <div id="contact-section">
             <a href="mailto:hensley.brenda@protonmail.com" class="email-link">hensley.brenda@protonmail.com</a>
-            <a href="#" class="email-link"><img src="images/w-github-logo.webp" alt="Github icon" class="footer-img"></a>
-            <a href="" class="email-link"><img src="images/w-linkedin-logo.webp" alt="Linkedin icon" class="footer-img"></a>
+            <a href="#" class="email-link"><img loading="lazy" src="images/w-github-logo.webp" alt="Github icon" class="footer-img"></a>
+            <a href="#" class="email-link"><img loading="lazy" src="images/w-linkedin-logo.webp" alt="Linkedin icon" class="footer-img"></a>
         </div>
         <p id="copyright">&copy 2024 Brenda Hensley. Designed and built by Gavin Hensley.</p>
     </footer>
